# software_quality_assurance

./: .gitignore  .travis.yml  CMakeLists.txt  CppCheckSuppressions.txt  README.md  README.md.orig
apps/: CMakeLists.txt  flip_coin.cpp
src/: coin_flipper.cpp  coin_flipper.hpp  gmock_test.cpp  gmock_test.cpp.autosave  random_number_generator.hpp  test_driven_development.cpp  tests.cpp  uniform_random_number_generator.hpp
tests/: CMakeLists.txt  project_test.cmake
tests/src/: assert_expect_tests.cpp  delegating_calls.cpp  gmock_test.cpp  main.cpp  test_driven_development.cpp  test_fixtures.cpp
